...
            </View>
          )}

          <View className="mb-2 mt-4 px-2">
            <View className="flex-row items-center">
              <View className={`mr-2 size-2 rounded-full ${isConnected ? 'bg-primary-500' : 'bg-red-500'}`} />
              <Text testID="network-status" className="text-sm text-gray-600 dark:text-charcoal-300">
                {isConnected ? t('networkSwitcher.status.connected', { network }) : t('networkSwitcher.status.disconnected')}
              </Text>
            </View>
          </View>

          <View className="mt-2">
...
